--- a/css/main.css
+++ b/css/main.css
@@ -1,22 +1,126 @@
 body {
   font-family: 'Montserrat', sans-serif;
-  color: #fff;
-  background-color: #031b2b;
+  color: #000;
+  background-color: #fff;
   height:100%;
   width: 100%;
   margin: 0;
   padding: 0;
   border: 0;
 }
-.logo {
-  display: block;
-  height: 25%;
-  width: 25%;
-  margin: auto;
+.productContainer {
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
 }
-.container {
-  color: #2ea0ef;
-  font-size: 36px;
-  font-size: 5vw;
+.slide {
+  display: none;
+  height: 100%;
+  background-color: #2ea0ef;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+
+}
+.tabs-aside {
+  background-image: url("/img/TabsAside.png");
+}
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: 60px;
+  color: white;
+  font-size: 20px;
+
+  user-select: none;
+  -webkit-user-select: none;
+}
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+.next:hover, .prev:hover {
+  text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
+}
+
+.current {
+  display: inline-block;
+  padding-bottom: -5px;
+  border-bottom: 5px solid #2ea0ef;
+}
+ul.navigation {
+  list-style: none;
+  margin: 0 auto;
+  text-align:center;
+}
+.navigation li {
+  text-decoration:none;
+  display: inline-block;
+}
+
+a.nav-button {
+  color: #fff;
+  padding: 12px;
+  margin: 30px;
+  display: inline-block;
+
   text-align: center;
+  font-weight: 400;
+  letter-spacing: 2px;
+  text-decoration: none;
+
+  cursor: pointer;
+  transition-duration: 0.1s;
+}
+a.nav-button:hover {
+  color: #2ea0ef;
+}
+.logo {
+  display: inline-block;
+  vertical-align: middle;
+  height: 45px;
+  width: auto;
+  margin: 30px;
+
+  transform: scale(1);
+  transition-duration: 0.2s;
+}
+.logo:hover {
+  transform: scale(1.1);
+}
+header {
+  font-size: 20px;
+  font-weight: 700;
+
+  position:fixed;
+  width:100%;
+  top:0;
+  height: 120px;
+  overflow-y: auto;
+
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+   -khtml-user-select: none; /* Konqueror HTML */
+     -moz-user-select: none; /* Firefox */
+      -ms-user-select: none; /* Internet Explorer/Edge */
+          user-select: none;
+}
+
+h1{
+  padding: 0;
+  margin: 50px;
+  font-size: 30px;
+  font-weight: 400;
+  text-align: center;
+}
+.product {
+  margin: 10px auto;
+  line-height: 128px;
+  font-size: 60px;
+  height: 128px;
 }
