--- a/css/main.css
+++ b/css/main.css
@@ -33,11 +33,15 @@ body {
   top: 50%;
   width: auto;
   padding: 16px;
-  margin-top: 60px;
+  margin-top: -18px;
   color: white;
   font-size: 20px;
 
-  user-select: none;
+  -moz-user-select: none;
+
+   -ms-user-select: none;
+
+       user-select: none;
   -webkit-user-select: none;
 }
 .next {
@@ -48,6 +52,22 @@ body {
   text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
 }
 
+.transparentNav {
+  background-color: transparent;
+}
+.whiteNav {
+  background-color: #fff;
+  box-shadow: 0px 2px 7px 0px rgba(0,0,0,0.2);
+}
+.clear {
+  color: #fff;
+}
+.blue {
+  color: #546e82;
+}
+.blue:hover {
+  color: #2ea0ef;
+}
 .current {
   display: inline-block;
   padding-bottom: -5px;
@@ -62,9 +82,7 @@ ul.navigation {
   text-decoration:none;
   display: inline-block;
 }
-
 a.nav-button {
-  color: #fff;
   padding: 12px;
   margin: 30px;
   display: inline-block;
@@ -75,10 +93,8 @@ a.nav-button {
   text-decoration: none;
 
   cursor: pointer;
-  transition-duration: 0.1s;
-}
-a.nav-button:hover {
-  color: #2ea0ef;
+  -webkit-transition-duration: 0.1s;
+          transition-duration: 0.1s;
 }
 .logo {
   display: inline-block;
@@ -87,11 +103,15 @@ a.nav-button:hover {
   width: auto;
   margin: 30px;
 
-  transform: scale(1);
-  transition-duration: 0.2s;
+  -webkit-transform: scale(1);
+
+          transform: scale(1);
+  -webkit-transition-duration: 0.2s;
+          transition-duration: 0.2s;
 }
 .logo:hover {
-  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 header {
   font-size: 20px;
@@ -104,8 +124,7 @@ header {
   overflow-y: auto;
 
   -webkit-touch-callout: none; /* iOS Safari */
-  -webkit-user-select: none; /* Safari */
-   -khtml-user-select: none; /* Konqueror HTML */
+  -webkit-user-select: none; /* Safari */ /* Konqueror HTML */
      -moz-user-select: none; /* Firefox */
       -ms-user-select: none; /* Internet Explorer/Edge */
           user-select: none;
@@ -119,8 +138,38 @@ h1{
   text-align: center;
 }
 .product {
-  margin: 10px auto;
-  line-height: 128px;
-  font-size: 60px;
-  height: 128px;
+  position: relative;
+  border-radius: 10px;
+  border: 1px solid #2ea0ef;
+
+  margin: 30px;
+  padding: 30px;
+  font-size: 20px;
+}
+h2 {
+  position: absolute;
+  top: 30px;
+  left: 190px;
+  display: inline-block;
+  padding: 0;
+  margin: 0;
+  font-size: 30px;
+  font-weight: 400;
+  text-align: center;
+}
+.productIntro {
+  position: absolute;
+  top: 70px;
+  left: 190px;
+  display: inline-block;
+}
+.productLink {
+  display: inline-block;
+  color: #fff;
+  text-decoration: none;
+  background-color: #2ea0ef;
+  border-radius: 10px;
+  font-size: 15px;
+  padding: 20px;
+  margin: 132 0 0 52px; 
 }
